// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request _httpResponseCallback should reject because no valid JSON response 1`] = `[Error: Response was not a valid JSON. Response: <html lang="en"><title>Hi</title></html>]`;

exports[`request _httpResponseCallback should reject because statusCode is not 2xx family 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`request _httpResponseCallback should reject because statusCode is not number 1`] = `[Error: Status code is undefined]`;

exports[`request should add headers 1`] = `
Object {
  "Authorization": "Bearer ",
  "Content-Length": 0,
  "Content-Type": "application/json",
  "User-Agent": "culqi-node",
  "foo": "bar",
}
`;

exports[`request should change publicKey 1`] = `
Object {
  "Authorization": "Bearer public-key-sample",
  "Content-Length": 0,
  "Content-Type": "application/json",
  "User-Agent": "culqi-node",
}
`;

exports[`request should create delete_ fn: DELETE 1`] = `"DELETE"`;

exports[`request should create get fn with get method: GET 1`] = `"GET"`;

exports[`request should create patch fn: PATCH 1`] = `"PATCH"`;

exports[`request should create post fn: POST 1`] = `"POST"`;

exports[`request should include default headers 1`] = `
Object {
  "Authorization": "Bearer ",
  "Content-Length": 0,
  "Content-Type": "application/json",
  "User-Agent": "culqi-node",
}
`;

exports[`request should throw error if public key was not provided but need 1`] = `[Error: Provide 'publicKey' property]`;
